force-app/main/default/objects/Price_Book_Entry__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_book__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries_Price_Book</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>