force-app/main/default/objects/Price_Book_Entry__c/fields/Use_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Use_Standard_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Standard Price</label>
    <type>Checkbox</type>
</CustomField>